[package]
name = "claude-token-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["2lab.ai"]
license = "MIT OR Apache-2.0"
description = "Standalone CLI for managing Claude Code OAuth credentials: Keychain <-> file bridging, 5h/7d quota, periodic refresh, multi-slot."
repository = "https://github.com/2lab-ai/claude-token-cli"
readme = "README.md"
keywords = ["claude", "oauth", "cli", "keychain", "credentials"]
categories = ["command-line-utilities", "authentication"]

[[bin]]
name = "claude-token"
path = "src/main.rs"

[lib]
name = "claude_token_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
chrono-tz = "0.9"
tempfile = "3"
fd-lock = "4"
thiserror = "1"
anyhow = "1"
tabled = "0.15"
secrecy = { version = "0.8", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
signal-hook = "0.3"
crossbeam-channel = "0.5"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
regex = "1"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
